--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bot"
 version = "2.0.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -26,5 +26,4 @@ sentry = "0.23.0"
 sentry-log = "0.23.0"
 
 [dependencies.poise]
-git = "https://github.com/kangalioo/poise"
-features = ["collector"]
+version = "0.2.2"
